prevent new topic button from overlapping in mobile

--- a/public/css/category.less
+++ b/public/css/category.less
@@ -1,5 +1,9 @@
 
 .category {
+	.span9 {
+		margin-bottom: 50px;
+	}
+
 	a {
 		li {
 			list-style: none;
